--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -50,8 +50,8 @@
 
             <h2>History</h2>
             <ul>
-                <li>Version 1.00 (July 27<sup>th</sup>, 2014) - Initial release.</li>
-                <li>Same version (March 31<sup>st</sup>, 2023) - Moved source code to GitHub.</li>
+                <li>Version 1.00 (July 27<sup>th</sup>, 2014): Initial release.</li>
+                <li>Same version (March 31<sup>st</sup>, 2023): Moved source code to GitHub.</li>
                 <li>Version 1.01 (June 25<sup>th</sup>, 2023)
                     <ul>
                         <li>Updated About dialog with GPLv3 notice</li>
@@ -65,7 +65,7 @@
                         <li>Added shortcuts to GitHub repository's Issues, Discussions, and Wiki.</li>
                     </ul>
                 </li>
-                <li>Same version (January 20<sup>th</sup>, 2024) - Added ReleaseNotes.html and SoftwareContentRegister.html to GitHub repo.</li>
+                <li>Same version (January 20<sup>th</sup>, 2024): Added ReleaseNotes.html and SoftwareContentRegister.html to GitHub repo.</li>
             </ul>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
