--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -66,6 +66,11 @@
                     </ul>
                 </li>
                 <li>Same version (January 20<sup>th</sup>, 2024): Added ReleaseNotes.html and SoftwareContentRegister.html to GitHub repo.</li>
+                <li>Version 1.03 (TBD):
+                    <ul>
+                        <li>Updated copyright information.</li>
+                    </ul>
+                </li>
             </ul>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
